Edited .html file

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
       <div id="about" class="about">
         <div class="about-col-1">
           <h1 class="wave-emoji">👋</h1>
-          <h1 class="about-header">Konichiwa, my name is Avril!</h1>
+          <h1 class="about-header">Konnichiwa, my name is Avril!</h1>
           <p class="about-paragraph">
-            I'm a videographer & photographer who resides at Pandacan, Manila.
+            I am first year student of Bachelor of Science in Information
+            Technology in PLM
           </p>
           <div class="social-links">
             <a
@@ -72,6 +73,20 @@
               target="_blank"
               rel="noopener noreferrer"
               ><i class="gg-facebook"></i> Facebook</a
+            >
+            <a
+              href="https://www.instagram.com/angeliiquuuee/"
+              class="social-icons"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="gg-instagram"></i> Instagram</a
+            >
+            <a
+              href="https://www.youtube.com/channel/UCwjsNItrB3pctbksIecLS7w"
+              class="social-icons"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="gg-youtube"></i> Youtube</a
             >
             <a
               href="https://www.linkedin.com/in/avril-angelique-abelarde-a26a74269/"
@@ -114,22 +129,33 @@
 
         <div class="about-me-wrapper">
           <div class="about-me-paragraph">
-            Currently taking<span>
-              Bachelor of Science in Infomation Technology</span
-            >
-            as a <span>freshmen</span>. I'm a passionate person who loves to
-            create and share my knowledge. <br /><br />
+            I'm a passionate person who loves to create and share my knowledge.
+            <br /><br />
             I'm a <span>self-taught developer</span> and I'm looking for new
             ways to improve my skills <br /><br />
+            <span>Hobbies:</span><br />
+            Reading, watching series and movies, listening to music, travelling,
+            playing games, and crafting bracelets and necklaces<br />
+            <br />
+
+            <span>Skills:</span><br />
+            Photographer, videographer, photo and video editor, crafty
           </div>
           <div class="about-me-paragraph">
-            <span>Zodiac Sign</span><br />
+            <span>Zodiac Sign:</span><br />
             Sagittarius 🏹<br />
 
             <br />
 
-            <span>Lives In</span><br />
-            Manila 🏹<br />
+            <span>Lives In:</span><br />
+            Pandacan, Manila <br />
+
+            <br />
+
+            <span>Birthdate:</span><br />
+            December 05, 2003<br />
+
+            <br />
           </div>
         </div>
       </div>
