--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <link href="https://unpkg.com/css.gg/icons/all.css" rel="stylesheet" />
 
     <!-- JSDelivr -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/css.gg/icons/all.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/css.gg/icons/all.css" rel="stylesheet" />
 
     <!-- Simple Parallax -->
     <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.5.1/dist/simpleParallax.min.js"></script>
@@ -22,16 +19,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Archivo:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
 
     <!-- Tabler Icon Web Font - Import -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css" />
 
     <link rel="stylesheet" href="styles.css" />
 
@@ -47,7 +38,7 @@
 
     <nav id="nav-id" class="nav">
       <section>
-        <h3>Avril Angelique Abelarde</h3>
+        <h3>Avril Abelarde</h3>
       </section>
       <section class="nav-links-container">
         <ul class="nav-links">
@@ -62,37 +53,18 @@
         <div class="about-col-1">
           <h1 class="wave-emoji">👋</h1>
           <h1 class="about-header">Konnichiwa, my name is Avril!</h1>
-          <p class="about-paragraph">
-            I am first year student of Bachelor of Science in Information
-            Technology in PLM
-          </p>
+          <p class="about-paragraph">I am first year student of Bachelor of Science in Information Technology in PLM</p>
           <div class="social-links">
-            <a
-              href="https://www.facebook.com/avril.angeliqueabelarde"
-              class="social-icons"
-              target="_blank"
-              rel="noopener noreferrer"
+            <a href="https://www.facebook.com/avril.angeliqueabelarde" class="social-icons" target="_blank" rel="noopener noreferrer"
               ><i class="gg-facebook"></i> Facebook</a
             >
-            <a
-              href="https://www.instagram.com/angeliiquuuee/"
-              class="social-icons"
-              target="_blank"
-              rel="noopener noreferrer"
+            <a href="https://www.instagram.com/angeliiquuuee/" class="social-icons" target="_blank" rel="noopener noreferrer"
               ><i class="gg-instagram"></i> Instagram</a
             >
-            <a
-              href="https://www.youtube.com/channel/UCwjsNItrB3pctbksIecLS7w"
-              class="social-icons"
-              target="_blank"
-              rel="noopener noreferrer"
+            <a href="https://www.youtube.com/channel/UCwjsNItrB3pctbksIecLS7w" class="social-icons" target="_blank" rel="noopener noreferrer"
               ><i class="gg-youtube"></i> Youtube</a
             >
-            <a
-              href="https://www.linkedin.com/in/avril-angelique-abelarde-a26a74269/"
-              class="social-icons"
-              target="_blank"
-              rel="noopener noreferrer"
+            <a href="https://www.linkedin.com/in/avril-angelique-abelarde-a26a74269/" class="social-icons" target="_blank" rel="noopener noreferrer"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="icon icon-tabler icon-tabler-brand-linkedin"
@@ -106,9 +78,7 @@
                 stroke-linejoin="round"
               >
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                <path
-                  d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"
-                ></path>
+                <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"></path>
                 <path d="M8 11l0 5"></path>
                 <path d="M8 8l0 .01"></path>
                 <path d="M12 16l0 -5"></path>
@@ -131,11 +101,9 @@
           <div class="about-me-paragraph">
             I'm a passionate person who loves to create and share my knowledge.
             <br /><br />
-            I'm a <span>self-taught developer</span> and I'm looking for new
-            ways to improve my skills <br /><br />
+            I'm a <span>self-taught developer</span> and I'm looking for new ways to improve my skills <br /><br />
             <span>Hobbies:</span><br />
-            Reading, watching series and movies, listening to music, travelling,
-            playing games, and crafting bracelets and necklaces<br />
+            Reading, watching series and movies, listening to music, travelling, playing games, and crafting bracelets and necklaces<br />
             <br />
 
             <span>Skills:</span><br />
@@ -207,10 +175,47 @@
           </div>
         </div>
       </div>
+
+      <div>
+        <h1 class="content-header">Artwork Gallery</h1>
+        <hr />
+        <div class="gallery-grid-wrapper">
+          <img
+            src="https://scontent.cdninstagram.com/v/t51.39111-15/335880298_759573822121029_1989439254024751193_n.jpg?stp=dst-jpg_s640x640&_nc_cat=109&ccb=1-7&_nc_sid=5a057b&_nc_ohc=friW6ogTzuwAX_jhZEu&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.cdninstagram.com&oh=02_AVDS6WPmFToCqoXvIqe1-NmSVQOW92y8bV91o6P932rB9A&oe=64181402&ig_cache_key=MzA1OTkyNzIxMjY4MzEwNjUwMQ%3D%3D.2-ccb7-5"
+            alt="Gallery Image"
+          />
+          <img
+            src="https://scontent.cdninstagram.com/v/t51.39111-15/335841854_8848896655185344_3132568211003784554_n.jpg?stp=dst-jpg_p480x480&_nc_cat=104&ccb=1-7&_nc_sid=5a057b&_nc_ohc=HSW1Ez9PGrkAX_IWKla&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.cdninstagram.com&oh=02_AVAtvBQ2wU57Xacd7zAWTmWTMGynLBiCHReEGI_Plav1Pg&oe=6417F3E2&ig_cache_key=MzA1OTkyNzg2OTE2NzEwOTEzOA%3D%3D.2-ccb7-5"
+            alt="Gallery Image"
+          />
+          <img
+            src="https://scontent.cdninstagram.com/v/t51.39111-15/335937492_772483824212264_5132612766829895712_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=5a057b&_nc_ohc=P5_zSjCkHl4AX-UjhvU&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.cdninstagram.com&oh=02_AVAqqxR8N9QM95UAGmtZwoU6JVshCUYqD1xeK_n4i_Y-FA&oe=64175BEB&ig_cache_key=MzA1OTkyNzk2MzU4OTM0MjcyMw%3D%3D.2-ccb7-5"
+            alt="Gallery Image"
+          />
+          <img
+            src="https://scontent.cdninstagram.com/v/t51.39111-15/335921491_1857388754632365_2777267919616262995_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=5a057b&_nc_ohc=SNpe2m95dF0AX867PDW&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.cdninstagram.com&oh=02_AVDEGAiuUPmQbJ0Asaqz8hRhM8VFD80sD9hEazYTnBr7Wg&oe=641873E2&ig_cache_key=MzA1OTkyODA0MDQyODkxODk0OA%3D%3D.2-ccb7-5"
+            alt="Gallery Image"
+          />
+          <img
+            src="https://scontent.cdninstagram.com/v/t51.39111-15/336297780_154540120817149_80017656932910555_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5a057b&_nc_ohc=TPhVKD4sp-YAX8RoGKK&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.cdninstagram.com&oh=02_AVDgIiHJzmxmmDRdLnebM8Ni1y3J962-LCLZx0R_P8ITnw&oe=6418B3D7&ig_cache_key=MzA1OTkyODE4OTU4NjczNzg1OA%3D%3D.2-ccb7-5"
+            alt="Gallery Image"
+          />
+          <img
+            src="https://scontent.cdninstagram.com/v/t51.39111-15/336196982_870791974012874_9102976852974520165_n.jpg?stp=dst-jpg_p600x600&_nc_cat=103&ccb=1-7&_nc_sid=5a057b&_nc_ohc=Iy0sqgNfyG4AX__HEnO&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.cdninstagram.com&oh=02_AVCdxnk8OiCwtqG_QCgA_k_U5mYgv3h_IJUZJgL9d9cwtA&oe=6418A3D1&ig_cache_key=MzA1OTkyODI2NzAyMjAwNzUyMQ%3D%3D.2-ccb7-5"
+            alt="Gallery Image"
+          />
+          <img
+            src="https://scontent.cdninstagram.com/v/t51.39111-15/336138653_164381619817740_1100647737693198192_n.jpg?stp=dst-jpg_p640x640&_nc_cat=106&ccb=1-7&_nc_sid=5a057b&_nc_ohc=K-Y5oK1HfHwAX-e6d1d&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.cdninstagram.com&oh=02_AVCepHKNOXqi4fN1iyFGFTe73qjWEeMkkXakRE0CwQ25xw&oe=641862A4&ig_cache_key=MzA1OTkyODQzMDQ5OTE1Nzk1NQ%3D%3D.2-ccb7-5"
+            alt="Gallery Image"
+          />
+          <img
+            src="https://scontent.cdninstagram.com/v/t51.39111-15/336293778_567799281993926_5218397446473961876_n.jpg?stp=dst-jpg_p640x640&_nc_cat=103&ccb=1-7&_nc_sid=5a057b&_nc_ohc=ZxHAIntURJEAX9orlvO&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.cdninstagram.com&oh=02_AVA838iVSjT4NwGu0EML2dzDn4JTz9jOwcV9vwmVvcpW0w&oe=64183D74&ig_cache_key=MzA1OTkyODUwOTUyODI4NjQwMA%3D%3D.2-ccb7-5"
+            alt="Gallery Image"
+          />
+        </div>
+      </div>
     </main>
 
-    <footer>
-      "Be the change you wish to see in the world." - Mahatma Gandhi
-    </footer>
+    <footer>"Be the change you wish to see in the world." - Mahatma Gandhi</footer>
   </body>
 </html>
